--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -199,6 +199,20 @@
 "post_is_ad" = "Этот пост был размещён за взятку.";
 "edited_short" = "ред.";
 
+"ignored_sources" = "Игнорируемые источники";
+"ignore_user" = "Игнорировать пользователя";
+"unignore_user" = "Не игнорировать пользователя";
+
+"ignore_club" = "Игнорировать группу";
+"unignore_club" = "Не игнорировать группу";
+"ignored_clubsers_list" = "Эти пользователи и группы не показываются в глобальной ленте.";
+"interesting_fact_zero" = "Интересный факт: вас никто не игнорирует!";
+"interesting_fact_one" = "Интересный факт: вас игнорирует один пользователь.";
+"interesting_fact_few" = "Интересный факт: вас игнорирует $1 пользователя.";
+"interesting_fact_many" = "Интересный факт: вас игнорирует $1 пользователей.";
+"interesting_fact_other" = "Интересный факт: вас игнорирует $1 пользователей.";
+"add_new_ignores" = "Добавить новое";
+
 /* Friends */
 
 "friends" = "Друзья";
