--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1179,6 +1179,11 @@
 "group_owner_is_banned" = "Создатель сообщества успешно забанен.";
 "group_is_banned" = "Сообщество успешно забанено";
 "description_too_long" = "Описание слишком длинное.";
+"invalid_club" = "Такой группы не существует.";
+"invalid_user" = "Такого пользователя не существует.";
+"no_sense" = "Нет смысла.";
+"cant_ignore_self" = "Нельзя игнорировать себя.";
+"max_ignores" = "Максимальное число игноров — $1";
 
 /* Admin actions */
 
