Add something related with videos
- Теперь видосы работают как аудио, пользователи могут добавлять и удалять видео из коллекции. Но, правда, после обновления пользователи потеряют все свои видео, потом подумаю как исправить
- Ещё теперь видео можно загружать в группу, жесть. И на странице группы теперь показывается 2 случайных видео из группы
- Возможно, исправлена загрузка видео под виндовс (а может я её сломал)
- У видосов теперь сохраняется ширина и высота, а так же длина
- У прикреплённого видео рядом с названием показывается его длина
- Видео теперь размещаются в masonry layout. Если помимо видео у поста есть другие фотографии или другие видео, то показывается только обложка видео и кнопка проигрывания
- В класс video в api добавлена поддержка просмотра видеозаписей из групп

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -749,6 +749,8 @@
 "no_videos" = "У вас нет видео.";
 "no_videos_results" = "Нет результатов.";
 
+"group_genetive" = "группы";
+
 /* Audios */
 
 "audios" = "Аудиозаписи";
